# json2struct

./: .travis.yml  Cargo.toml  README.md  aa.go
src/: main.rs
src/json2struct/: golang.rs  json2struct2golang.rs  mod.rs  rust.rs
