[package]
name = "json2struct"
version = "0.1.0"
authors = ["petechen <15736755067@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4.0"
structopt = "0.3.15"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
heck = "0.3.1"
